                        User-Visible lbcd Changes

lbcd 3.4.3 (unreleased)

    Fix source typo that prevented compilation on Mac OS X.  (It is
    probably obvious that the developer doesn't have access to Mac OS X
    systems to test compilation....)

lbcd 3.4.2 (2013-12-17)

    Support getutxent and use it in preference to getutent, falling back
    on the latter only if getutxent isn't available.  Hopefully fixes
    compilation problems on Mac OS X.

    Support FreeBSD (and Debian GNU/kFreeBSD) if /proc is mounted.

    Update to rra-c-util 4.12:

    * network_connect now resumes after being interrupted by a signal.
    * Correctly check the return status of snprintf.
    * Correctly handle formatting errors in asprintf functions.

    Update to C TAP Harness 2.3:

    * bail and sysbail now exit with status 255 to match Test::More.
    * Suppress lazy plans and test summaries if the test failed with bail.
    * Add warn_unused_result gcc attributes to relevant functions.

lbcd 3.4.1 (2013-03-28)

    If $sysconfdir/nolbcd (/usr/local/etc/nolbcd by default) exists, force
    the weight of the default service to the maximum regardless of what
    the normal weight calculation returned.  This allows a host to be
    effectively dropped out of a load-balanced pool by touching this file.

    Document the lbcd -t test mode and fix the output to treat the results
    as unsigned numbers instead of signed numbers.

    Stop rewriting maximum weights in the lbcdclient output to -1 and
    report the actual number that will be used by clients.

    Document lbcd handling of /etc/nologin.

    Update to rra-c-util 4.8:

    * Improve POD tests.
    * Cleanly passes clang --analyze.

    Update to C TAP Harness 2.1:

    * runtests now treats the command line as a list of tests by default.
    * The full test executable path can now be passed to runtests -o.
    * Improved harness output for tests with lazy plans.